Refactored large amounts of code and implemented new features

--- a/src/main/resources/assets/fishingrework/lang/en_us.json
+++ b/src/main/resources/assets/fishingrework/lang/en_us.json
@@ -1,4 +1,6 @@
 {
-  "item.fishingrework.crate": "Crate",
-  "block.fishingrework.crate": "Crate"
+  "item.fishingrework.basic_crate": "Basic Crate",
+  "block.fishingrework.basic_crate": "Basic Crate",
+  "itemGroup.fishingrework.general": "Pixel's Fishing Rework",
+  "item.fishingrework.sword_fish": "Sword Fish"
 }
