--- a/src/main/resources/assets/fishingrework/lang/en_us.json
+++ b/src/main/resources/assets/fishingrework/lang/en_us.json
@@ -1,10 +1,15 @@
 {
-  "item.fishingrework.basic_crate": "Basic Crate",
   "block.fishingrework.basic_crate": "Basic Crate",
   "itemGroup.fishingrework.general": "Pixel's Fishing Rework",
   "item.fishingrework.sword_fish": "Sword Fish",
   "item.fishingrework.gold_fishing_rod": "Golden Fishing Rod",
   "item.fishingrework.iron_fishing_rod": "Iron Fishing Rod",
   "item.fishingrework.diamond_fishing_rod": "Diamond Fishing Rod",
-  "item.fishingrework.netherite_fishing_rod": "Netherite Fishing Rod"
+  "item.fishingrework.netherite_fishing_rod": "Netherite Fishing Rod",
+  "block.fishingrework.fish_oil_planks": "Fish Oil Treated Planks",
+  "block.fishingrework.fish_oil_slab": "Fish Oil Treated Slab",
+  "block.fishingrework.fish_oil_fence": "Fish Oil Treated Fence",
+  "block.fishingrework.fish_oil_stairs": "Fish Oil Treated Stairs",
+  "block.fishingrework.fish_oil_fence_gate": "Fish Oil Treated Fence Gate",
+  "item.fishingrework.fish_oil_bottle": "Bottle of Fish Oil"
 }
