--- a/src/main/resources/assets/fishingrework/lang/en_us.json
+++ b/src/main/resources/assets/fishingrework/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "block.fishingrework.basic_crate": "Basic Crate",
-  "itemGroup.fishingrework.general": "Pixel's Fishing Rework",
+  "fishing_rework.group.general": "Pixel's Fishing Rework",
   "item.fishingrework.sword_fish": "Sword Fish",
   "item.fishingrework.gold_fishing_rod": "Golden Fishing Rod",
   "item.fishingrework.iron_fishing_rod": "Iron Fishing Rod",
