--- a/src/main/resources/assets/fishingrework/lang/zh_cn.json
+++ b/src/main/resources/assets/fishingrework/lang/zh_cn.json
@@ -1,6 +1,6 @@
 {
   "block.fishingrework.basic_crate": "基础箱子",
-  "itemGroup.fishingrework.general": "Pixel 的钓鱼重生",
+  "fishing_rework.group.general": "Pixel 的钓鱼重生",
   "item.fishingrework.sword_fish": "剑鱼",
   "item.fishingrework.gold_fishing_rod": "金钓鱼竿",
   "item.fishingrework.iron_fishing_rod": "铁钓鱼竿",
