--- a/src/main/resources/assets/fishingrework/lang/zh_cn.json
+++ b/src/main/resources/assets/fishingrework/lang/zh_cn.json
@@ -5,31 +5,31 @@
   "item.fishingrework.gold_fishing_rod": "金钓鱼竿",
   "item.fishingrework.iron_fishing_rod": "铁钓鱼竿",
   "item.fishingrework.diamond_fishing_rod": "钻石钓鱼竿",
-  "item.fishingrework.netherite_fishing_rod": "雪石钓鱼竿",
-  "block.fishingrework.fish_oil_planks": "鱼油处理板",
-  "block.fishingrework.fish_oil_slab": "鱼油处理台b",
-  "block.fishingrework.fish_oil_fence": "鱼油处理栅栏",
-  "block.fishingrework.fish_oil_stairs": "鱼油处理楼梯",
-  "block.fishingrework.fish_oil_fence_gate": "鱼油处理栅栏门",
-  "item.fishingrework.fish_oil_bottle": "鱼水瓶子",
+  "item.fishingrework.netherite_fishing_rod": "下界合金钓鱼竿",
+  "block.fishingrework.fish_oil_planks": "抹油的木板",
+  "block.fishingrework.fish_oil_slab": "抹油的木台阶",
+  "block.fishingrework.fish_oil_fence": "抹油的木栅栏",
+  "block.fishingrework.fish_oil_stairs": "抹油的木楼梯",
+  "block.fishingrework.fish_oil_fence_gate": "抹油的木栅栏门",
+  "item.fishingrework.fish_oil_bottle": "鱼油瓶",
   "effect.fishingrework.venom": "毒液",
-  "item.minecraft.fishing_rod.tooltip": "第1层",
-  "item.fishingrework.gold_fishing_rod.tooltip": "第2层",
-  "item.fishingrework.iron_fishing_rod.tooltip": "第2层",
-  "item.fishingrework.diamond_fishing_rod.tooltip": "第3层",
-  "item.fishingrework.netherite_fishing_rod.tooltip": "第4层",
-  "block.fishingrework.basic_crate.tooltip_1": "箱子满载鱼和各种材料",
-  "block.fishingrework.basic_crate.tooltip_2": "第一级和第二级钓鱼",
-  "block.fishingrework.resource_crate": "资源箱子",
-  "block.fishingrework.resource_crate.tooltip_1": "地下资源充沛的宝箱",
-  "block.fishingrework.resource_crate.tooltip_2": "第二级、第三级和第四级钓鱼",
-  "block.fishingrework.plants_crate": "植物箱",
-  "block.fishingrework.plants_crate.tooltip_1": "在世界各地可以找到的植物箱子",
-  "block.fishingrework.plants_crate.tooltip_2": "第一级和第二级钓鱼",
-  "block.fishingrework.mob_crate": "生物资源宝箱",
-  "block.fishingrework.mob_crate.tooltip_1": "排满的资源被暴民掉落了",
-  "block.fishingrework.mob_crate.tooltip_2": "第二级、第三级和第四级钓鱼",
-  "block.fishingrework.rare_resource_crate": "稀有资源宝箱",
-  "block.fishingrework.rare_resource_crate.tooltip_1": "满载稀有资源的宝箱",
-  "block.fishingrework.rare_resource_crate.tooltip_2": "仅可通过第4级钓鱼之林获取。"
+  "item.minecraft.fishing_rod.tooltip": "等级1",
+  "item.fishingrework.gold_fishing_rod.tooltip": "等级2",
+  "item.fishingrework.iron_fishing_rod.tooltip": "等级2",
+  "item.fishingrework.diamond_fishing_rod.tooltip": "等级3",
+  "item.fishingrework.netherite_fishing_rod.tooltip": "等级4",
+  "block.fishingrework.basic_crate.tooltip_1": "装有鱼和基础材料",
+  "block.fishingrework.basic_crate.tooltip_2": "可用等级1~2的钓鱼竿获得",
+  "block.fishingrework.resource_crate": "矿物箱子",
+  "block.fishingrework.resource_crate.tooltip_1": "装有各种矿物的箱子",
+  "block.fishingrework.resource_crate.tooltip_2": "可用等级2~4的钓鱼竿获得",
+  "block.fishingrework.plants_crate": "植物箱子",
+  "block.fishingrework.plants_crate.tooltip_1": "装有各种植物",
+  "block.fishingrework.plants_crate.tooltip_2": "可用等级1~2的钓鱼竿获得",
+  "block.fishingrework.mob_crate": "掉落物箱子",
+  "block.fishingrework.mob_crate.tooltip_1": "装有各种生物掉落物的箱子",
+  "block.fishingrework.mob_crate.tooltip_2": "可用等级2~4的钓鱼竿获得",
+  "block.fishingrework.rare_resource_crate": "稀有资源箱子",
+  "block.fishingrework.rare_resource_crate.tooltip_1": "装有稀有资源的宝箱",
+  "block.fishingrework.rare_resource_crate.tooltip_2": "仅可通过等级4的钓鱼竿获得"
 }
